# ferric-bloom

./: .gitignore  .gitmodules  COMPARISON.md  Cargo.toml  PYTHON_BINDINGS.md  README.md  build_unified.sh  pyproject.toml
docs/: README.md  SETUP.md  _config.yml  comparison.md  index.md  python-bindings.md  testing.md
examples/: basic_usage.rs  unified_api_demo.py
python/ferric_bloom/: __init__.py  unified_filter.py
src/: blocked_bloom.rs  bloom.rs  blowchoc.rs  hash.rs  lib.rs  python_module.rs  utils.rs
tests/: README.md  blowchoc_results.csv  ferric_bloom_results.csv  ferric_vs_blowchoc_benchmark.py  ferric_vs_blowchoc_comparison.csv  paper_faithful_benchmark.py  paper_faithful_results.csv  requirements-testing.txt  test_both_implementations.py  test_parity.py
