[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferric-bloom"
description = "High-performance Bloom filters and Blocked Bloom filters implemented in Rust"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ferric Bloom Contributors"}
]
keywords = ["bloom-filter", "probabilistic", "data-structure", "cache-efficient", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "numpy>=1.20",
]
benchmark = [
    "pytest-benchmark>=3.4",
    "matplotlib>=3.5",
    "pandas>=1.3",
]
dev = [
    "pytest>=6.0",
    "pytest-benchmark>=3.4",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "maturin>=1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ferric-bloom"
Repository = "https://github.com/yourusername/ferric-bloom"
Documentation = "https://github.com/yourusername/ferric-bloom"
Issues = "https://github.com/yourusername/ferric-bloom/issues"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "ferric_bloom" 