[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ferric-bloom"
version = "0.1.0"
description = "High-performance Bloom filters with both Python/numba and Rust implementations"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy",
    "numba",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "matplotlib",
    "seaborn",
]

[project.urls]
Repository = "https://github.com/your-username/ferric-bloom"
Documentation = "https://ferric-bloom.readthedocs.io"

[tool.maturin]
python-source = "python"
module-name = "ferric_bloom"
features = ["python"]

[project.scripts]
blowchoc = "blowchoc.blowchoc.blowchoc_main:main" 